style(pages): fix some text colors in dark mode

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,6 +8,7 @@
 .__next-auth-theme-auto,
 .__next-auth-theme-light {
   --color-background: #fff;
+  --color-text: #000;
   --color-primary: #444;
   --color-control-border: #bbb;
   --color-button-active-background: #f9f9f9;
@@ -17,6 +18,7 @@
 
 .__next-auth-theme-dark {
   --color-background: #000;
+  --color-text: #fff;
   --color-primary: #ccc;
   --color-control-border: #555;
   --color-button-active-background: #060606;
@@ -28,6 +30,7 @@
 @media (prefers-color-scheme: dark) {
   .__next-auth-theme-auto {
     --color-background: #000;
+    --color-text: #fff;
     --color-primary: #ccc;
     --color-control-border: #555;
     --color-button-active-background: #060606;
@@ -47,6 +50,7 @@ h1 {
   font-weight: 400;
   margin-bottom: 1.5rem;
   padding: 0 1rem;
+  color: var(--color-text);
 }
 
 form {
@@ -194,7 +198,7 @@ a.site {
     font-weight: 500;
     border-radius: 0.3rem;
     background: var(--color-info);
-    color: #fff;
+    color: var(--color-text);
 
     p {
       text-align: left;
